--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-jsx": "^2.2.8",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "react": "^16.13.1",
@@ -33,5 +34,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
