--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "dist"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "react-markdown": "^4.3.1"
   }
 }
