--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "codethings_react_widgets",
+  "name": "codethings-react-ui",
   "version": "1.0.0",
-  "description": "library of react UI widgets",
+  "description": "library of react UI widgets and helpers",
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kirinmurphy/codethings-react-widgets.git"
+    "url": "git+https://github.com/kirinmurphy/codethings-react-ui.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kirinmurphy/codethings-react-widgets/issues"
+    "url": "https://github.com/kirinmurphy/codethings-react-ui/issues"
   },
-  "homepage": "https://github.com/kirinmurphy/codethings-react-widgets#readme",
+  "homepage": "https://github.com/kirinmurphy/codethings-react-ui#readme",
   "devDependencies": {
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
