--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codethings-react-ui",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "library of react UI widgets and helpers",
   "main": "dist/index.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
     "rollup": "^2.22.2",
+    "rollup-plugin-postcss": "^3.1.3",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.27.1",
     "typescript": "^3.9.7"
