--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@typescript-eslint/parser": "^3.7.0",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.5.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-nested": "^4.2.3",
     "rollup": "^2.22.2",
     "rollup-plugin-postcss": "^3.1.3",
     "rollup-plugin-sass": "^1.2.2",
