--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "codethings-react-ui",
-  "version": "1.0.27",
+  "version": "1.0.28",
   "description": "library of react UI widgets and helpers",
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
-    "start": "rollup -c -w"
+    "start": "rollup -c -w",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/kirinmurphy/codethings-react-ui#readme",
   "devDependencies": {
+    "@testing-library/react": "^10.4.8",
+    "@types/jest": "^26.0.9",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/styled-jsx": "^2.2.8",
@@ -29,12 +32,16 @@
     "eslint": "^7.5.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
+    "jest": "^26.2.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-nested": "^4.2.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rollup": "^2.22.2",
     "rollup-plugin-postcss": "^3.1.3",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.27.1",
+    "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
@@ -49,5 +56,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "react-markdown": "^4.3.1"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
