--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "babel-runtime": "^6.26.0",
     "cssnano": "^4.1.10",
     "eslint": "^7.5.0",
+    "eslint-plugin-jest-dom": "^3.1.6",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
+    "eslint-plugin-testing-library": "^3.4.1",
     "jest": "^26.2.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-nested": "^4.2.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "rollup": "^2.22.2",
     "rollup-plugin-postcss": "^3.1.3",
     "rollup-plugin-sass": "^1.2.2",
@@ -56,6 +56,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "react-device-detect": "^1.13.1",
     "react-markdown": "^4.3.1"
   },
   "jest": {
